--- a/vue/package.json
+++ b/vue/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --openssl-legacy-provider",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test:e2e": "vue-cli-service test:e2e"
+        
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -21,15 +21,14 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-e2e-cypress": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
+    
     "@vue/cli-plugin-unit-mocha": "^4.5.11",
     "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "1.1.3",
-    "babel-eslint": "^10.0.1",
+    
     "chai": "^4.3.3",
     "cypress": "8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-plugin-vue": "^7.7.0",
+    
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
